--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,26 @@
 {
 	"name": "jessiesiat/hack-php",
-    "type": "microframework",
-    "description": "Microframework for hackers",
-    "keywords": ["microframework", "library"],
+    "type": "project",
+    "description": "Small framework for hackers",
+    "keywords": ["framework"],
     "license": "MIT",
     "authors": [
         {
-            "name": "Jessie Siat",
+            "name": "Jessie Cris Siat",
             "email": "jcris.siat@gmail.com"
         }
     ],
 	"require": {
         "php": ">=5.3.0",
-		"symfony/http-kernel": "2.6.*",
-		"symfony/routing": "2.6.*",
-		"symfony/finder": "2.6.*",
-		"symfony/config": "~2.2",
-		"symfony/console": "2.6.*",
 		"pimple/pimple": "3.0.0",
+		"symfony/console": "2.6.*",
+		"symfony/routing": "2.6.*",
+		"symfony/http-kernel": "2.6.*",
 		"twig/twig": "~1.0",
-		"illuminate/support": "5.0.*",
-		"illuminate/config": "5.0.*",
 		"monolog/monolog": "1.13.*",
-		"vlucas/phpdotenv": "~1.1"
+		"illuminate/support": "5.0.*"
 	},
 	"require-dev": {
-        "mockery/mockery": "~0.9",
         "phpunit/phpunit": "~4.0"
     },
 	"autoload": {
