--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,10 @@
 		"files": [
             "src/helpers.php"
         ]
-	}
+	},
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
+    }
 }
